--- a/template/lig0/replica-confs/eq0.conf
+++ b/template/lig0/replica-confs/eq0.conf
@@ -46,7 +46,7 @@ binaryoutput        yes
 constraints  on
 consexp  2
 consref  ../build/complex.pdb ;#need all positions
-conskfile  ../constraint/cons.pdb
+conskfile  /hppfs/work/pn72qu/di36yax3/tmp/uq_namd/template/lig0/constraint/cons.pdb
 conskcol  O
 temperature 50
 
