fixing cons.pdb file generation after building complex/pdb

--- a/template/g15/replica-confs/eq1.conf
+++ b/template/g15/replica-confs/eq1.conf
@@ -42,7 +42,7 @@ PMEGridSpacing      1.0
 constraints         on
 consexp             2
 consref             ../build/complex.pdb ;#need all positions
-conskfile           /hppfs/work/pn72qu/di36yax3/tmp/uq_namd/template/g15/constraint/cons.pdb
+conskfile           ../constraint/cons.pdb
 conskcol            O
 constraintScaling   1
 temperature         50
