encode dcd frequency output in sim1.conf

--- a/template/g15/replica-confs/sim1.conf
+++ b/template/g15/replica-confs/sim1.conf
@@ -65,7 +65,7 @@ BerendsenPressureRelaxationTime         {{ pressure_relaxation_time }}
 BerendsenPressureFreq                   2
 
 # Output trajectories
-dcdfreq  5000
+dcdfreq  {{ dcd_freq }}
 DCDUnitcell  yes
 
 # protocol - MD
