adding automation of box dimensions computing

--- a/template/g15/replica-confs/eq0.conf
+++ b/template/g15/replica-confs/eq0.conf
@@ -30,10 +30,11 @@ outputPressure      500
 
 # Protocol specific information
 ################################################################################
-cellBasisVector1	60.794  0.000  0.000
-cellBasisVector2	 0.000 91.666  0.000
-cellBasisVector3	 0.000  0.000 77.570
-cellOrigin		 0.000  0.000  0.000
+#cellBasisVector1	60.794  0.000  0.000
+#cellBasisVector2	 0.000 91.666  0.000
+#cellBasisVector3	 0.000  0.000 77.570
+#cellOrigin		 0.000  0.000  0.000
+source ./dim0.conf
 
 PME                 yes
 PMEGridSpacing      1.0
