--- a/template/g15/replica-confs/eq2.conf
+++ b/template/g15/replica-confs/eq2.conf
@@ -80,7 +80,7 @@ set n 1
 
 while {$n <= $nall} {
    constraintScaling $factor
-   run {{ n_steps }}
+   run {{ n_steps_loop }}
    set n [expr $n + 1]
    set factor [expr $factor * 0.5]
 }
