--- a/make_templates/eq2.conf
+++ b/make_templates/eq2.conf
@@ -77,10 +77,11 @@ DCDUnitcell  yes
 set factor 1
 set nall 0
 set n 1
+set run2 40000
 
 while {$n <= $nall} {
    constraintScaling $factor
-   run 40000
+   run $run2
    set n [expr $n + 1]
    set factor [expr $factor * 0.5]
 }
