--- a/make_templates/template_eq2.conf
+++ b/make_templates/template_eq2.conf
@@ -74,13 +74,14 @@ dcdfreq			{{ dcdfreq_eq2 }}		#
 DCDUnitcell			{{ DCDUnitcell_eq2 }}		#
 
 # protocol - minimization
-set factor 1
-set nall 0
-set n 1
+set factor			{{ set_factor_eq2 }}		#
+set nall			{{ set_nall_eq2 }}		#
+set n			{{ set_n_eq2 }}		#
+set run2			{{ set_run2_eq2 }}		#
 
 while {$n <= $nall} {
 constraintScaling $factor
-run 40000
+run $run2
 set n [expr $n + 1]
 set factor [expr $factor * 0.5]
 }
