--- a/namd_easyvvuq_state.json
+++ b/namd_easyvvuq_state.json
@@ -1,9 +1,9 @@
 {
-    "db_location": "sqlite:////tmp/namd_plekj63u/campaign.db",
+    "db_location": "sqlite:////tmp/namd_0e70f8it/campaign.db",
     "db_type": "sql",
     "active_app": "uq_for_namd",
     "campaign_name": "namd_",
-    "campaign_dir": "namd_plekj63u",
+    "campaign_dir": "namd_0e70f8it",
     "log": [
         {
             "element": {
