--- a/template/g15/replica-confs/template_eq0.conf
+++ b/template/g15/replica-confs/template_eq0.conf
@@ -52,9 +52,9 @@ conskcol			{{ conskcol_eq0 }}		#
 temperature			{{ temperature_eq0 }}		#
 
 # protocol - minimization
-set factor 10
-set nall 0
-set n 1
+set factor			{{ set_factor_eq0 }}		#
+set nall			{{ set_nall_eq0 }}		#
+set n			{{ set_n_eq0 }}		#
 
 minimization			{{ minimization_eq0 }}		#
 while {$n <= $nall} {
