update of template generation after testing

--- a/make_templates/eq1.conf
+++ b/make_templates/eq1.conf
@@ -45,7 +45,7 @@ consref             ../build/complex.pdb ;#need all positions
 conskfile           ../constraint/cons.pdb
 conskcol            O
 constraintScaling   1
-temperature         50
+temperature         50.
 reassignFreq        100
 reassignIncr        1
 reassignHold        300
