--- a/make_templates/eq2.conf
+++ b/make_templates/eq2.conf
@@ -48,8 +48,8 @@ conskcol            O
 
 # Langevin temperature
 langevin            on    ;# do langevin dynamics
-langevinDamping     5     ;# damping coefficient (gamma) of 5/ps
-langevinTemp        300
+langevinDamping     5.     ;# damping coefficient (gamma) of 5/ps
+langevinTemp        300.
 langevinHydrogen    no    ;# dont couple langevin bath to hydrogens
 
 # pressure
@@ -87,4 +87,4 @@ while {$n <= $nall} {
 }
 
 constraintScaling 0
-run 600000
+run 60000
