--- a/make_templates/sim1.conf
+++ b/make_templates/sim1.conf
@@ -15,7 +15,7 @@ switching           on
 switchdist          10.
 pairlistdist        13.5
 # Integrator Parameters
-timestep            2.0		# variable, 0.5, 1, 2 (can be smaller but singificantly increases wallclock time)
+timestep            2.0 ;# variable, 0.5, 1, 2 (can be smaller but singificantly increases wallclock time)
 rigidBonds          all  ;# needed for 2fs steps
 rigidtolerance      0.00001
 rigidIterations     100
@@ -50,8 +50,8 @@ xstFreq             5000
 
 # Constant-T
 langevin            on    ;# do langevin dynamics
-langevinDamping     5	    # variable, positive decimal, ranging between 0.5 and 10 is possibly reasonable (2 - 5 optimal?)
-langevinTemp        300    # no meaningful change
+langevinDamping     5.	;# variable, positive decimal, ranging between 0.5 and 10 is possibly reasonable (2 - 5 optimal?)
+langevinTemp        300.  ;# no meaningful change
 langevinHydrogen    no    ;# dont couple langevin bath to hydrogens
 
 # Constant-P
@@ -61,7 +61,7 @@ useConstantArea       no  ;# no for water box, yes for membrane
 BerendsenPressure                       on
 BerendsenPressureTarget                 1.01325
 BerendsenPressureCompressibility        4.57e-5
-BerendsenPressureRelaxationTime         100
+BerendsenPressureRelaxationTime         100.
 BerendsenPressureFreq                   2
 
 # Output trajectories
@@ -69,4 +69,4 @@ dcdfreq  5000
 DCDUnitcell  yes
 
 # protocol - MD
-run 5000000
+run 50000
