--- a/make_templates/template_shortlist_26-10/template_eq0.conf
+++ b/make_templates/template_shortlist_26-10/template_eq0.conf
@@ -10,18 +10,18 @@ readexclusions no
 # Force-Field Parameters
 exclude             scaled1-4
 1-4scaling          0.833333
-cutoff              12.
-switching           on
-switchdist          10.
-pairlistdist        13.5
+cutoff              {{ cutoff }}
+switching           {{ switching }}
+switchdist          {{ switchdist }}
+pairlistdist        {{ pairlistdist }}
 # Integrator Parameters
-timestep            2.0  ;# 2fs/step
-rigidBonds          all  ;# needed for 2fs steps
-rigidtolerance      0.00001
-rigidIterations     100
-nonbondedFreq       1
-fullElectFrequency  2
-stepspercycle       10
+timestep            {{ timestep }}  ;# 2fs/step
+rigidBonds          {{ rigidBonds }}  ;# needed for 2fs steps
+rigidtolerance      {{ rigidtolerance }}
+rigidIterations     {{ rigidIterations }}
+nonbondedFreq       {{ nonbondedFreq }}
+fullElectFrequency  {{ fullElectFrequency }}
+stepspercycle       {{ stepspercycle }}
 wrapWater           on
 wrapAll             on
 # Output
@@ -37,7 +37,7 @@ outputPressure      500
 source ./dim0.conf
 
 PME                 yes
-PMEGridSpacing      1.0
+PMEGridSpacing      {{ PMEGridSpacing }}
 
 # Output and restart
 binaryoutput        yes
@@ -51,9 +51,9 @@ conskfile  ../constraint/cons.pdb
 conskcol  O
 temperature 50
 
-# protocol - minimization
+# protocol - minimization (maxime: check nall)
 set factor 10
-set nall 0
+set nall 10
 set n 1
 
 minimization    on
@@ -65,4 +65,5 @@ while {$n <= $nall} {
 }
 
 constraintScaling 0
-minimize 1000
+minimize {{ minimize_eq0 }}
+
