--- a/make_templates/template_shortlist_26-10/template_eq1.conf
+++ b/make_templates/template_shortlist_26-10/template_eq1.conf
@@ -1,27 +1,27 @@
 # Forcefield/Topology Information
-paraTypeCharmm      off
-amber yes
-parmfile ../build/complex.prmtop
-readexclusions no
-coordinates  ../build/complex.pdb
+paraTypeCharmm      off			# no change
+amber yes				# no change
+parmfile ../build/complex.prmtop	# no change
+readexclusions no			# no change
+coordinates  ../build/complex.pdb	# no change
 
 # Unchanging information
 ################################################################################
 # Force-Field Parameters
-exclude             scaled1-4
-1-4scaling          0.833333
-cutoff              12.
-switching           on
-switchdist          10.
-pairlistdist        13.5
+exclude             scaled1-4		# no change
+1-4scaling          0.833333		# no change
+cutoff              {{ cutoff }}
+switching           {{ switching }}
+switchdist          {{ switchdist }}
+pairlistdist        {{ pairlistdist }}
 # Integrator Parameters
 timestep            {{ timestep }}  ;# 2fs/step
-rigidBonds          all  ;# needed for 2fs steps
-rigidtolerance      0.00001
-rigidIterations     100
-nonbondedFreq       1
-fullElectFrequency  2
-stepspercycle       10
+rigidBonds          {{ rigidBonds }}  ;# needed for 2fs steps
+rigidtolerance      {{ rigidtolerance }}
+rigidIterations     {{ rigidIterations }}
+nonbondedFreq       {{ nonbondedFreq }}
+fullElectFrequency  {{ fullElectFrequency }}
+stepspercycle       {{ stepspercycle }}
 wrapWater           on
 wrapAll             on
 # Output
@@ -36,7 +36,7 @@ outputPressure      500
 #extendedSystem      ../equilibration/eq0.xsc
 
 PME                 yes
-PMEGridSpacing      1.0
+PMEGridSpacing      {{ PMEGridSpacing }}
 
 # Constraints
 constraints         on
@@ -45,10 +45,10 @@ consref             ../build/complex.pdb ;#need all positions
 conskfile           ../constraint/cons.pdb
 conskcol            O
 constraintScaling   1
-temperature         50
-reassignFreq        100
-reassignIncr        1
-reassignHold        300
+temperature         {{ initTemperature_eq1 }}
+reassignFreq        {{ reassignFreq_eq1 }}
+reassignIncr        {{ reassignIncr_eq1 }}
+reassignHold        {{ setTemperature }}
 
 # Output and restart
 binaryoutput        yes
@@ -60,4 +60,5 @@ xstFreq             5000
 #XSTfile             ../equilibration/eq1.xst
 dcdfreq  5000
 DCDUnitcell  yes
-run {{ n_steps }}
+run {{ run_eq1 }}
+
