--- a/make_templates/template_shortlist_26-10/template_sim1.conf
+++ b/make_templates/template_shortlist_26-10/template_sim1.conf
@@ -11,17 +11,17 @@ coordinates  ../build/complex.pdb
 exclude             scaled1-4
 1-4scaling          0.833333
 cutoff              {{ cutoff }}
-switching           on
-switchdist          10.
-pairlistdist        13.5
+switching           {{ switching }}
+switchdist          {{ switchdist }}
+pairlistdist        {{ pairlistdist }}
 # Integrator Parameters
 timestep            {{ timestep }}  ;# 2fs/step
-rigidBonds          all  ;# needed for 2fs steps
-rigidtolerance      0.00001
-rigidIterations     100
-nonbondedFreq       1
-fullElectFrequency  2
-stepspercycle       10
+rigidBonds          {{ rigidBonds }}  ;# needed for 2fs steps
+rigidtolerance      {{ rigidtolerance }}
+rigidIterations     {{ rigidIterations }}
+nonbondedFreq       {{ nonbondedFreq }}
+fullElectFrequency  {{ fullElectFrequency }}
+stepspercycle       {{ stepspercycle }}
 wrapWater           on
 wrapAll             on
 # Output
@@ -37,7 +37,7 @@ outputPressure      5000
 #extendedSystem      ../equilibration/eq2.xsc
 
 PME                 yes
-PMEGridSpacing      1.0
+PMEGridSpacing      {{ PMEGridSpacing }}
 
 # Output and restart
 binaryoutput        yes
@@ -51,22 +51,23 @@ xstFreq             5000
 # Constant-T
 langevin            on    ;# do langevin dynamics
 langevinDamping     {{ langevinDamping }}     ;# damping coefficient (gamma) of 5/ps
-langevinTemp        {{ temperature }}
-langevinHydrogen    no    ;# dont couple langevin bath to hydrogens
+langevinTemp        {{ setTemperature }}
+langevinHydrogen    {{ langevinHydrogen }}    ;# dont couple langevin bath to hydrogens
 
 # Constant-P
-useGroupPressure      yes ;# needed for 2fs steps
+useGroupPressure      {{ useGroupPressure }} ;# needed for 2fs steps
 useFlexibleCell       no  ;# no for water box, yes for membrane
 useConstantArea       no  ;# no for water box, yes for membrane
 BerendsenPressure                       on
-BerendsenPressureTarget                 {{ pressure }}
-BerendsenPressureCompressibility        4.57e-5
-BerendsenPressureRelaxationTime         {{ pressure_relaxation_time }}
-BerendsenPressureFreq                   2
+BerendsenPressureTarget                 {{ BerendsenPressureTarget }}
+BerendsenPressureCompressibility        {{ BerendsenPressureCompressibility }}
+BerendsenPressureRelaxationTime         {{ BerendsenPressureRelaxationTime }}
+BerendsenPressureFreq                   {{ BerendsenPressureFreq }}
 
 # Output trajectories
-dcdfreq  {{ dcd_freq }}
+dcdfreq  {{ dcd_freq_sim1 }}
 DCDUnitcell  yes
 
 # protocol - MD
-run {{ n_steps }}
+run {{ run_sim1 }}
+
