--- a/template/g15/replica-confs/template_eq2.conf
+++ b/template/g15/replica-confs/template_eq2.conf
@@ -1,27 +1,27 @@
 # Forcefield/Topology Information
-paraTypeCharmm      off
-amber yes
-parmfile ../build/complex.prmtop
-readexclusions no
-coordinates  ../build/complex.pdb
+paraTypeCharmm      off			# no change
+amber yes				# no change
+parmfile ../build/complex.prmtop	# no change
+readexclusions no			# no change
+coordinates  ../build/complex.pdb	# no change
 
 # Unchanging information
 ################################################################################
 # Force-Field Parameters
-exclude             scaled1-4
-1-4scaling          0.833333
-cutoff              12.
-switching           on
-switchdist          10.
-pairlistdist        13.5
+exclude             scaled1-4		# no change
+1-4scaling          0.833333		# no change
+cutoff              {{ cutoff }}
+switching           {{ switching }}
+switchdist          {{ switchdist }}
+pairlistdist        {{ pairlistdist }}
 # Integrator Parameters
-timestep            2.0  ;# 2fs/step
-rigidBonds          all  ;# needed for 2fs steps
-rigidtolerance      0.00001
-rigidIterations     100
-nonbondedFreq       1
-fullElectFrequency  2
-stepspercycle       10
+timestep            {{ timestep }}  ;# 2fs/step
+rigidBonds          {{ rigidBonds }}  ;# needed for 2fs steps
+rigidtolerance      {{ rigidtolerance }}
+rigidIterations     {{ rigidIterations }}
+nonbondedFreq       {{ nonbondedFreq }}
+fullElectFrequency  {{ fullElectFrequency }}
+stepspercycle       {{ stepspercycle }}
 wrapWater           on
 wrapAll             on
 # Output
@@ -37,7 +37,7 @@ outputPressure      500
 #extendedSystem      ../equilibration/eq1.xsc
 
 PME                 yes
-PMEGridSpacing      1.0
+PMEGridSpacing      {{ PMEGridSpacing }}
 
 # Constraints
 constraints         on
@@ -48,19 +48,19 @@ conskcol            O
 
 # Langevin temperature
 langevin            on    ;# do langevin dynamics
-langevinDamping     5.     ;# damping coefficient (gamma) of 5/ps
-langevinTemp        300.
-langevinHydrogen    no    ;# dont couple langevin bath to hydrogens
+langevinDamping     {{ langevinDamping }}     ;# damping coefficient (gamma) of 5/ps
+langevinTemp        {{ setTemperature }}
+langevinHydrogen    {{ langevinHydrogen }}    ;# dont couple langevin bath to hydrogens
 
 # pressure
-useGroupPressure      yes ;# needed for 2fs steps
+useGroupPressure      {{ useGroupPressure }} ;# needed for 2fs steps
 useFlexibleCell       no  ;# no for water box, yes for membrane
 useConstantArea       no  ;# no for water box, yes for membrane
 BerendsenPressure                       on
-BerendsenPressureTarget                 1.0
-BerendsenPressureCompressibility        4.57e-5
-BerendsenPressureRelaxationTime         100
-BerendsenPressureFreq                   2
+BerendsenPressureTarget                 {{ BerendsenPressureTarget }}
+BerendsenPressureCompressibility        {{ BerendsenPressureCompressibility }}
+BerendsenPressureRelaxationTime         {{ BerendsenPressureRelaxationTime }}
+BerendsenPressureFreq                   {{ BerendsenPressureFreq }}
 
 # Output and restart
 binaryoutput        yes
@@ -75,16 +75,16 @@ DCDUnitcell  yes
 
 # protocol - minimization
 set factor 1
-set nall 0
+set nall 10
 set n 1
-set run2 40000
 
 while {$n <= $nall} {
    constraintScaling $factor
-   run $run2
+   run {{ run_cycle_eq2 }}
    set n [expr $n + 1]
    set factor [expr $factor * 0.5]
 }
 
 constraintScaling 0
-run 60000
+run {{ run_eq2 }}
+
