--- a/template/g15/replica-confs/template_eq1.conf
+++ b/template/g15/replica-confs/template_eq1.conf
@@ -31,6 +31,9 @@ outputPressure      500
 # Protocol specific information
 ################################################################################
 
+# Seed control for aleatoric uncertainty quantification
+seed                {{ rng_seed_eq1 }}
+
 # Cell size and PME
 #bincoordinates      ../equilibration/eq0.coor
 #extendedSystem      ../equilibration/eq0.xsc
